# netbox-azure-groups

./: .gitignore  AZURE_GROUPS_PLUGIN_REQUIREMENTS.md  CHANGELOG.md  CONTEXT_SUMMARY.md  DEPLOYMENT_GUIDE.md  FINAL_STATUS.md  LICENSE  MANIFEST.in  PROJECT_STATUS.md  README.md  access-control-project-spec.md  create_test_data.py  fortigate_addresses_sample.json  fortigate_import.py  fortigate_policies_parsed_20250902_121916.json  fortigate_policies_parsed_20250902_121933.json  fortigate_policies_raw.json  fortigate_policy_fetcher.py  migration_examples.py  netbox_migration_agent.py  project.md  pyproject.toml  rbac-extension-draft.md  rbac-extension-project-brief.md  setup.py  user_stories.md
.claude/: settings.local.json
.claude/agents/: netbox-dev-deploy.md  netbox-dev-full-deploy.md  netbox-dev-migrate.md  netbox-migration-manager.md  netbox-plugin-deployer.md
netbox_azure_groups/: __init__.py  filtersets.py  forms.py  navigation.py  tables.py  template_content.py  urls.py  views.py
netbox_azure_groups/api/: __init__.py  serializers.py  urls.py  viewsets.py
netbox_azure_groups/migrations/: 0001_initial.py  0002_groupownership.py  0003_suppress_auto_display.py  0004_businessunit_membership.py  0004_refactor_to_direct_foreignkeys.py  0005_contactgroupmembership_custom_field_data_and_more.py  0007_create_groupownership_table.py  0007_fix_related_names.py  0008_add_access_control_models.py  0009_add_access_control_models.py  0010_add_business_unit_and_update_protected_resource.py  0010_add_complete_fortigate_policy.py  0010_add_fortigate_policy.py  0011_businessunit_membership.py  __init__.py
netbox_azure_groups/models/: __init__.py  azure_groups.py
(+23 files in other folders)
